plugins {
    id 'java'
    id 'application'
    //id 'distribution'
}

group 'io.turntabl'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8
//targetCompatibility = '16.0.2'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation  group: 'junit', name: 'junit', version: '4.12'
}
test {
    useJUnit()
}

//this will build a start script in
tasks.startScripts {
    doLast {
        def scriptFile = file "${outputDir}/${applicationName}"
        scriptFile.text = scriptFile.text.replace('CLASSPATH=$APP_HOME/lib', 'CLASSPATH=$APP_HOME/libs')
    }
}

//put your package-qualified main class name here
application {
    mainClass.set("io.turntabl.TCMS")
}